Deluge 1.0.3 (In Development)
 Core:
  * Fix upnp - it should work on more routers now too
  * Fix issue where Deluge would send improper stats to the tracker after a
    pause/resume.

Deluge 1.0.2 (10 October 2008)
 Core:
  * Fix issue where torrents will not be properly added to the session

Deluge 1.0.1 (10 October 2008)
 Core:
  * Change the default max global upload slots to 4 instead of -1 since libtorrent
    will automatically open more slots to meet the upload speed limit.
  * Fix display of tracker error messages
  * Fix add_torrent_url() to download the torrent file in a thread to prevent
    the main thread from blocking and causing the daemon to freeze.
  * Removed the 'Maximum Connections Per Second' setting and replaced it with a
    default setting of 20.  This should alleviate speed issues some are experiencing.
  * Changed max half-open connections default limit to 8 on XP/2000 and 4 on Vista
  * Prevent being able to set file priorities for compactly allocated torrents as
    it is not intended to work.
  * Fix freezing on start-up issues on systems that do not have a properly
    configured localhost entry.
  * Change max connections default setting to 200
  * Fix issue with invalid bencoding from some trackers
  * Plenty of libtorrent updates that should improve core stability

 GtkUI:
  * Improve performance of files tab by only updating when values change
  
 Misc:
  * Fix #187 set a 5 second timer to save the config file after a config value
    has been changed.
  * Fix #503 change the boost lib detection logic to first look for -mt and
    if not available, fall back to regular boost lib (non-multithreaded)

 WebUI:
  * Add enable "Auto Add" checkbox
 
Deluge 1.0.0 - "Sharks Are Bulletproof" (21 September 2008)
 Core:
  * Include GeoIP database for country look-ups
  * Fix upgrading from 0.5.x state where torrents would have no trackers

Deluge 0.9.09 - "1.0.0_RC9" (15 September 2008)
 Core: